--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - ./backend/app:/app/app
       - ./backend/seed.py:/app/seed.py
+      - ./lineup.csv:/app/lineup.csv
       - sqlite_data:/app/instance
     ports:
       - "5000:5000"
