--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,9 +7,12 @@ RUN npm install
 
 COPY . .
 
-EXPOSE 3003
+# Define build argument with default value
+ARG REACT_APP_API_URL=http://localhost:5000/api
+# Set it as an environment variable
+ENV REACT_APP_API_URL=$REACT_APP_API_URL
 
+EXPOSE 3003
 ENV PORT=3003
-ENV REACT_APP_API_URL=http://localhost:5000/api
 
 CMD ["npm", "start"] 
