--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,11 +11,17 @@ services:
       - ./lineup.csv:/app/lineup.csv
       - ./parsed.csv:/app/parsed.csv
       - sqlite_data:/app/instance
+      - ./logs:/app/logs
     ports:
       - "5000:5000"
     environment:
       - FLASK_APP=wsgi.py
       - FLASK_DEBUG=1
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   frontend:
     build: ./frontend
@@ -24,6 +30,7 @@ services:
     volumes:
       - ./frontend/src:/app/src
       - ./frontend/public:/app/public
+      - ./logs:/app/logs
     ports:
       - "3003:3003"
     environment:
@@ -31,6 +38,11 @@ services:
       - REACT_APP_API_URL=https://ubbi.fromseb.com:5000/api
     depends_on:
       - backend
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 volumes:
   sqlite_data: 
