--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - "3003:3003"
     environment:
       - PORT=3003
-      - REACT_APP_API_URL=https://ubbi.fromseb.com:5000/api
+      - REACT_APP_API_URL=https://ubbi.fromseb.com/api
     depends_on:
       - backend
     logging:
