--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,8 +37,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.27"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.4.17"
   }
-} 
+}
